# udp-chat

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: AppConfig.cpp  AppConfig.h  DatabaseLogger.cpp  DatabaseLogger.h  MainWindow.cpp  MainWindow.h  NetworkManager.cpp  NetworkManager.h  main.cpp
